--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v3
               with:
-                  node-version: '20.x'
+                  node-version: '22.18.0'
                   cache: 'npm'
             - run: npm install
             - run: npm run ci:lint
