--- a/.github/workflows/publish-npmjs.yaml
+++ b/.github/workflows/publish-npmjs.yaml
@@ -11,7 +11,7 @@ jobs:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v3
               with:
-                  node-version: '20.x'
+                  node-version: '22.18.0'
                   cache: 'npm'
                   registry-url: 'https://registry.npmjs.org'
             - run: npm install
