--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@angular/platform-browser": "20.2.0",
         "@angular/platform-browser-dynamic": "20.2.0",
         "@angular/router": "20.2.0",
+        "@fortawesome/fontawesome-free": "7.1.0",
         "@js-joda/core": "5.6.5",
         "@js-joda/extra": "0.12.3",
         "@js-joda/locale": "4.15.2",
