--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,8 @@
                         ],
                         "styles": [
                           "@angular/material/prebuilt-themes/purple-green.css",
+                          "node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css",
+                          "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
                           "src/styles.scss"
                         ],
                         "scripts": []
