--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
         "file-saver-es": "2.0.5",
         "luxon": "3.7.1",
         "rxjs": "7.8.1",
-        "tslib": "2.8.1",
-        "zone.js": "0.15.0"
+        "tslib": "2.8.1"
     },
     "devDependencies": {
         "@angular-eslint/builder": "21.0.1",
