--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
         "start:remote": "ng serve --host 0.0.0.0",
         "format": "oxfmt",
         "format:check": "oxfmt --check",
-        "lint:prettier": "cross-env prettier --check \"**/*.{ts,js,md,html,scss}\"",
-        "format:prettier": "cross-env prettier --write \"**/*.{ts,js,md,html,scss}\"",
         "lint:lint": "ng lint",
         "format:lint": "ng lint --fix",
         "ci:test-libs": "node ./scripts/ci/test-libs.js",
-        "ci:lint": "npm run lint:prettier && npm run lint:lint",
+        "ci:lint": "npm run format:check && npm run lint:lint",
         "ci:build": "ng build ppwcode --base-href /angular-sdk/ --deploy-url /angular-sdk/",
         "ci:build-libs": "./scripts/ci/build-libs.sh",
         "ci:check-production-vulnerabilities": "npx better-npm-audit audit --production",
@@ -56,7 +54,6 @@
         "@typescript-eslint/eslint-plugin": "8.16.0",
         "@typescript-eslint/parser": "8.16.0",
         "concurrently": "8.2.1",
-        "cross-env": "7.0.3",
         "eslint": "9.33.0",
         "eslint-plugin-depend": "1.2.0",
         "eslint-plugin-no-secrets": "2.2.1",
@@ -69,8 +66,6 @@
         "karma-junit-reporter": "2.0.1",
         "ng-packagr": "21.0.0",
         "oxfmt": "0.28.0",
-        "prettier": "3.8.1",
-        "prettier-config-standard": "7.0.0",
         "retire": "5.2.5",
         "typescript": "5.9.3"
     },
