--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "eslint-plugin-depend": "1.2.0",
         "eslint-plugin-no-secrets": "2.2.1",
         "jasmine-core": "4.6.0",
+        "jsdom": "28.0.0",
         "karma": "6.4.2",
         "karma-chrome-launcher": "3.2.0",
         "karma-coverage": "2.2.1",
@@ -69,7 +70,8 @@
         "prettier": "3.1.1",
         "prettier-config-standard": "7.0.0",
         "retire": "5.2.5",
-        "typescript": "5.9.3"
+        "typescript": "5.9.3",
+        "vitest": "4.0.18"
     },
     "overrides": {
         "deep-equal": {
